# NguyenDucToan-week5

./: Jenkinsfile  practice.md  pyproject.toml
nguyenductoan_week5/templates/: layout.html
tests/: test_nguyenductoan_week5.py
