[tool.poetry]
name = "NguyenDucToan-week5"
version = "0.1.0"
description = ""
authors = ["Toan <38588170+toanduc0671@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
